--- a/src/main/resources/templates/multi-role-task.html
+++ b/src/main/resources/templates/multi-role-task.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Multi-Role Task</title>
+    <link rel="stylesheet" href="/css/styles.css" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>Multi-Role Task</h1>
