--- a/src/main/resources/templates/restricted-report.html
+++ b/src/main/resources/templates/restricted-report.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Restricted Report</title>
+    <link rel="stylesheet" href="/css/styles.css" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>Restricted Report</h1>
